Added the ability to post a new recipe. Also, names are validated for uniqueness.
